@startuml

skinparam packageStyle rectangle
skinparam linetype ortho

' Enforce vertical layout
top to bottom direction

package "Configurations" {
    ' Configuration class to the left of Facades
    class Configuration {
    }
    class Validator {}
    class ConfigurationFileReader {}
}


' Facades at the top
package "Facades" {
    class TMCSubarrayFacade {
        + subarray_node: DeviceProxy {property}
        + dish_leaf_node_dict: Dict[str, DeviceProxy] {property}
        + csp_subarray_leaf_node: DeviceProxy {property}
        + sdp_subarray_leaf_node: DeviceProxy {property}
        + set_subarray_id(id)
        + configure(input_string)
        + end_observation()
    }

    class CSPFacade {
        + csp_master: DeviceProxy {property}
        + csp_subarray: DeviceProxy {property}
        + method_1()
    }

    class SDPFacade {
        + sdp_master: DeviceProxy {property}
        + sdp_subarray: DeviceProxy {property}
        + method_1()
    }

    class DishesFacade {
        + dish_master_dict: Dict[str, DeviceProxy] {property}
        + method_1()
    }
}

Configuration -[hidden]right- Facades

' Wrappers and Devices in the middle
package "Wrappers" {
    class TelescopeWrapper {
    }

    abstract class TMCDevices
    class ProductionTMCDevices
    abstract class CSPDevices
    class EmulatedCSPDevices
    class ProductionCSPDevices
    abstract class SDPDevices
    class EmulatedSDPDevices
    class ProductionSDPDevices
    abstract class DishesDevices
    class EmulatedDishesDevices
    class ProductionDishesDevices

    ProductionTMCDevices -up-|> TMCDevices
    EmulatedCSPDevices -up-|> CSPDevices
    ProductionCSPDevices -up-|> CSPDevices
    EmulatedSDPDevices -up-|> SDPDevices
    ProductionSDPDevices -up-|> SDPDevices
    EmulatedDishesDevices -up-|> DishesDevices
    ProductionDishesDevices -up-|> DishesDevices

    TelescopeWrapper "1" *-- "1" TMCDevices
    TelescopeWrapper "1" *-- "1" CSPDevices
    TelescopeWrapper "1" *-- "1" SDPDevices
    TelescopeWrapper "1" *-- "1" DishesDevices
}



package "Actions" {

}
' ensure Actions are below Wrappers
"Wrappers" -[hidden]down--- Actions
Actions ..up..> Wrappers
"Facades" ..down..> Actions
"Configurations" ..down..> Actions

' Stacking packages vertically
Facades -[hidden]down- "Wrappers"
Facades ..down..> "Wrappers"

' Position emulated devices slightly lower
EmulatedCSPDevices -[hidden]down- ProductionCSPDevices
EmulatedSDPDevices -[hidden]down- ProductionSDPDevices
EmulatedDishesDevices -[hidden]down- ProductionDishesDevices

@enduml